tests/good/passing_by_reference.lt
void incrementBy(int x, int y)
{
    x = x + y;
}

void main(){
    int x = 0;
    print(x);
    incrementBy(x, 100);
    print(x);
    incrementBy(& x, 100);
    print(x);
}