tests/bad/static_typing1.lt

void main(){
    int a = "kot";
}